--- a/gallery.html
+++ b/gallery.html
@@ -36,43 +36,9 @@
                 <div class = "icon-2"><a href="#"><i class="fab fa-linkedin-in icon-3"></i></a></div>
             </div>
         </aside>
-            <!-- <section class = "container-section">
-                <h1 class = "section-1">Garlly</h1>
-                <div class = "flex-gallery ">
-                    <div class = "flex-48">
-                        <img src="assets/media/gallery/01.jpg" class = "img-21" alt="">
-                    </div>
-                    <div class = "img-22">
-                        <img src="assets/media/gallery/06.jpg" class = "img-21" alt="">
-                    </div>
-                    <div class = "img-22">
-                        <img src="assets/media/gallery/02.jpg" class = "img-21" alt="">
-                    </div>
-                    <div class = "img-22">
-                        <img src="assets/media/gallery/03.jpg" class = "img-21" alt="">
-                    </div>
-                    <div class = "img-22">
-                        <img src="assets/media/gallery/04.jpg" class = "img-21" alt="">
-                    </div>
-                    <div class = "img-22">
-                        <img src="assets/media/gallery/05.jpg" class = "img-21" alt="">
-                    </div>
-                    <div class = "img-22">
-                        <img src="assets/media/gallery/07.jpg" class = "img-21" alt="">
-                    </div>
-                    <div class = "img-22">
-                        <img src="assets/media/gallery/08.jpg" class = "img-21" alt="">
-                    </div>
-                    <div class = "img-22">
-                        <img src="assets/media/gallery/09.jpg" class = "img-21" alt="">
-                    </div>
-                    <div class = "img-22">
-                        <img src="assets/media/gallery/10.jpg" class = "img-21" alt="">
-                    </div>
-                </div>
-            </section> -->
+          
             <section class ="gallery-flex-1">
-                <h1 class = "section-1">Garlly</h1>
+                <h1 class = "section-1">Gallery</h1>
                 <div class= "flex">
                     <div class = " col-1 flex-50">
                         <img src="assets/media/gallery/01.jpg" class = "flexi-img" alt="">
